<resources>
    <string name="app_name">E-Todo</string>
    <string name="search_task_hint">Search Task</string>
    <string name="task_name">Name</string>
    <string name="task_status">Status</string>
    <string name="task_priority">Priority</string>
    <string name="task_notes">Notes</string>
    <string name="task_due_date">Due Date</string>
    <string name="delete_warning_msg">Are you sure you want to delete this item?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>
