<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:text="@string/task_name"
        android:textSize="20dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <EditText
        android:id="@+id/editText_taskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="55dp"
        android:background="@color/colorPrimaryDark"

        android:id="@+id/view" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:textSize="20dp"
        android:text="@string/task_due_date"
        android:textAlignment="center"
        android:layout_below="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText_dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:ems="10"
        android:inputType="date" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="130dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:textSize="20dp"
        android:text="@string/task_notes"
        android:textAlignment="center"
        android:layout_below="@+id/view2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <EditText
        android:id="@+id/editText_taskNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_dueDate"
        android:layout_alignStart="@+id/editText_dueDate"
        android:layout_alignTop="@+id/textView6"
        android:ems="10"
        android:inputType="textMultiLine" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="205dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:textSize="20dp"
        android:text="@string/task_priority"
        android:textAlignment="center"
        android:layout_below="@+id/view3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <Spinner
        android:id="@+id/spinner_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/editText_taskNotes"
        android:layout_alignStart="@+id/editText_taskNotes"
        />

   <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="260dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:textSize="20dp"
        android:text="@string/task_status"
        android:textAlignment="center"
        android:layout_below="@+id/view4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7"
        />

    <Spinner
        android:id="@+id/spinner_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/spinner_priority"
        android:layout_alignStart="@+id/spinner_priority"
        />
</RelativeLayout>