<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/task_name"
        android:textSize="20dp"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:id="@+id/viewTask_taskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_alignTop="@+id/textView"
        android:textAlignment="center"
        android:layout_marginRight="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimaryDark"

        android:id="@+id/view" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="14dp"
        android:text="@string/task_due_date"
        android:textAlignment="center"
        android:layout_marginStart="14dp"
        android:layout_below="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/viewTask_dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginRight="15dp"
        android:text="10/08/2017" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/task_notes"
        android:textAlignment="center"
        android:layout_below="@+id/view2"
        android:textSize="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        />

    <TextView
        android:id="@+id/viewTask_taskNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_marginRight="15dp"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="160dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/task_priority"
        android:textAlignment="center"
        android:layout_below="@+id/view3"
        android:layout_alignParentLeft="true"
        android:textSize="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <TextView
        android:id="@+id/viewTask_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/viewTask_taskNotes"
        android:layout_alignStart="@+id/viewTask_taskNotes"
        android:textSize="20dp"
        android:layout_marginRight="15dp"
        android:textAlignment="center" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="215dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/task_status"
        android:textAlignment="center"
        android:layout_below="@+id/view4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/viewTask_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/viewTask_priority"
        android:layout_alignStart="@+id/viewTask_priority"
        android:layout_marginRight="15dp"
        android:textSize="20dp"
        android:textAlignment="center"/>
</RelativeLayout>